// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sign in renders correctly 1`] = `
<div>
  <div
    className="LoginPage"
  >
    <div
      className="imageHeader"
    >
      <img
        alt=""
        className="sjsuImage"
        src="https://ok2static.oktacdn.com/bc/image/fileStoreRecord?id=fs01heub3azJBMXWF0x7"
      />
      <div
        className="beacon-container"
      />
    </div>
    <div
      className="LogIncontainer"
    >
      <p
        className="signInText"
      >
        Sign In
      </p>
      <form
        className="form"
        onSubmit={[Function]}
      >
        <input
          className="inputStyle1"
          name="emailId"
          placeholder="SJSU Email ID"
          required={true}
          type="email"
        />
        <input
          className="inputStyle1"
          name="password"
          placeholder="Password"
          required={true}
          type="password"
        />
        <button
          className="signInBtn"
          type="submit"
        >
          Sign In
        </button>
        <button
          className="orText"
          onClick={[Function]}
        >
          Create an account? 
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Signup renders correctly 1`] = `
<div>
  <div
    className="LoginPage"
  >
    <div
      className="imageHeader"
    >
      <img
        alt=""
        className="sjsuImage"
        src="https://ok2static.oktacdn.com/bc/image/fileStoreRecord?id=fs01heub3azJBMXWF0x7"
      />
      <div
        className="beacon-container"
      />
    </div>
    <div
      className="LogIncontainer"
    >
      <p
        className="signInText"
      >
        Sign Up
      </p>
      <form
        className="form"
        onSubmit={[Function]}
      >
        <input
          className="inputStyle1"
          name="username"
          placeholder="Name"
          required={true}
          type="text"
        />
        <input
          className="inputStyle1"
          name="emailId"
          placeholder="SJSU Email ID"
          required={true}
          type="email"
        />
        <input
          className="inputStyle1"
          name="password"
          placeholder="Password"
          required={true}
          type="password"
        />
         
        <br />
        Student
        <input
          checked={true}
          name="employee"
          type="radio"
          value="student"
        />
        Faculty
        <input
          name="employee"
          type="radio"
          value="faculty"
        />
        <button
          className="signInBtn"
          type="submit"
        >
          Sign Up
        </button>
      </form>
      <button
        className="orText"
        onClick={[Function]}
      >
        Already signed up?
      </button>
    </div>
  </div>
</div>
`;
